# CMusicPlayer

./: .gitignore  README.md
MusicPlayer/: MusicPlayer.pro  MusicPlayer.pro.user.4ff44b8
MusicPlayer/MusicPlayerBackend/: .gitignore  CMakeLists.txt  MusicPlayerBackend.pro  README.md  common.h  gstplayer.c  gstplayer.h  install.sh  logger.h  main.c  mediaFilesBrowserInterface.h  mediafilesbrowser.c  mediafilesbrowser.h  multimediacache.c  multimediacache.h  multimediacachefilesys.c  multimediacachefilesys.h  multimediacacheusb.c  multimediacacheusb.h  platform.c  platform.h  playercore.c  playercore.h  sdlplayer.h  usblistener.c  usblistener.h
MusicPlayer/MusicPlayerFront/MusicPlayerFront/: MusicPlayerFront.pro  main.c  playerfront.h
MusicPlayerCore/: README.md  gstplayer.c  gstplayer.h  logger.h  mediafilesbrowser.c  multimediacache.c  multimediacachefilesys.c  multimediacacheusb.c  playercore.c  sldplayer.c  usblistener.h
MusicPlayerFront/: CMakeLists.txt  README.md  main.c  playerfront.c  playerfront.h
